--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "systemjs",
+  "name": "@5punk/systemjs",
   "version": "0.21.4",
   "description": "Dynamic ES module loader",
   "repository": {
